# Radeon-hackathon-2026-07

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: governance.yml
Radeon-Cloud-User Guide/: README.md
app/: config.py  main.py
app/api/: admin.py  auth.py  automation_tasks.py  comments.py  files.py  global_runs.py  integrations.py  members.py  monitor.py  notifications.py  overview.py  projects.py  reports.py  risks.py  runs.py  task_board.py  tasks.py
app/cli/: __init__.py  admin.py
app/integrations/: __init__.py  base.py  ci.py  email.py  scm.py  webhook.py
app/llm/: client.py  embedding_client.py
app/observability/: error_codes.py
app/rag/: __init__.py  chunker.py  embedder.py  indexer.py  manifest.py  parsers.py  qa_service.py  quality_bench.py  retriever.py  scanner.py
app/reports/: __init__.py  generator.py
app/schemas/: __init__.py  doc_version_sql.py  models.py  phase_h_sql.py  risk_sql.py  task_sql.py
app/security/: __init__.py  auth.py  paths.py  permissions.py
app/services/: __init__.py  automation_tasks.py  backup.py  benchmark.py  cache.py  change_impact.py  comments.py  doc_version.py  files.py  log_rotation.py  membership.py  monitor.py  notifications.py  phase_c.py  project_workflow.py  projects.py  quality_metrics.py  report_center.py  risk_engine.py  risk_scanner.py  runs.py  stress_test.py  task_lifecycle.py  task_queue.py  token_manager.py
app/tools/: __init__.py  task_checker.py  task_reader.py
app/ui/: __init__.py  workbench.py
docs/: ADMIN_TECH_LEAD_WORKPLAN.zh-CN.md  APPLICATION_DEVELOPER_WORKPLAN.zh-CN.md  FULL_PRODUCT_ROADMAP.zh-CN.md  PR_UI0_FOUNDATION.md  UI_API_CONTRACT.md  UNIFIED_WORKBENCH_UI_PLAN.zh-CN.md
scripts/: benchmark.py  setup_phase_h.py  start_workbench.py  validate_pr_title.py  validate_specs.py  validate_task_ui.py  validate_ui_contract.py  verify_end_to_end_rag_report_cloud.py  verify_phase_a.py  verify_phase_c.py  verify_phase_c_cloud.py  verify_phase_f.py  verify_stage_g.py
specs/: README.md
specs/_template/: PRODUCT.md  TECH.md  TEST_REPORT.md
specs/core-contracts-260720-1120/: PRODUCT.md  TECH.md  TEST_REPORT.md
specs/phase-h/: TECH.md  (+2 more)
tests/: conftest.py  test_dependency_declaration.py  test_llm_client.py  test_phase_c_contracts.py  test_phase_f.py  test_phase_h.py  test_phase_j.py  test_project_api_authorization.py  test_project_report_workflow.py  test_projects.py  test_rag_import.py  test_remote_model.py  test_runs.py  test_schemas.py  test_stage_e_cleanup.py  test_stage_g.py  test_stage_i_automation.py  test_stage_i_integrations.py  test_task_reports.py  test_task_ui_contract.py  test_ui_api_contract.py  test_ui_files_api.py  test_validate_pr_title.py  test_workbench.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.dev.config.ts
(+87 files in other folders)
