[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectpack-office-agent"
version = "0.1.0"
description = "Private, evidence-driven project office assistant"
requires-python = ">=3.12"
dependencies = [
  "faiss-cpu>=1.9,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "openpyxl>=3.1,<4",
  "pydantic-settings>=2.6,<3",
  "pypdf>=6,<7",
  "python-docx>=1.2,<2",
  "rank-bm25>=0.2,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "reportlab>=4,<6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
